lifeguard-derive/tests/ui/compile_error_from_attribute.stderr
error: expected string literal
  --> tests/ui/compile_error_from_attribute.rs:12:16
   |
12 |         from = 123,  // ERROR: should be a string like "Column::UserId"
   |                ^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/compile_error_from_attribute.rs:16:2
   |
16 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_from_attribute.rs`
